--- a/.env
+++ b/.env
@@ -7,7 +7,10 @@ FLASK_ENV=production
 PORT=8000
 
 # Azure PostgreSQL Database
-DATABASE_URL=postgresql://doadmin%40bidpro:12March1986$@bidpro.postgres.database.azure.com:5432/tender_system?sslmode=require
+DATABASE_URL=postgresql://doadmin@bidpro:12March1986$@bidpro.postgres.database.azure.com:5432/tender_system?sslmode=require
+
+# For psycopg3
+SQLALCHEMY_DATABASE_URI = 'postgresql+psycopg://doadmin:12March1986$@bidpro.postgres.database.azure.com:5432/tender_system'
 
 # AI API Keys
 ANTHROPIC_API_KEY=your-anthropic-api-key
